--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container bg-primary mt-5">
         <p class="text-center text-light fs-5 fw-bold">TYPES OF JAVASCRIPT</p> <br>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 mx-auto">
                 
                 <p  class="text-light text-center">Inline js</p>
                 <input class="btn-warning col-lg-12"  type="button" value="Click here" onclick="alert('THIS IS INLINE JS');"/><br> <br>
